[package]
name = "cbtm-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
geo = "0.33.1"
geo-types = { version = "0.7.17", features = ["serde"] }
geozero = {version = "0.15.1", features = ["with-postgis-sqlx"]}
serde = {version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid" ] }
uuid = "1.23.1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }